--- a/app/src/main/res/layout/imagecardview.xml
+++ b/app/src/main/res/layout/imagecardview.xml
@@ -23,7 +23,7 @@
             android:padding="16dp">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/cardTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
@@ -33,10 +33,10 @@
                 android:textSize="23sp" />
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/cardImage"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:layout_below="@id/textView"
+                android:layout_below="@id/cardTitle"
                 android:background="@color/colorAccent" />
 
 
