--- a/app/src/main/res/layout/imagecardview.xml
+++ b/app/src/main/res/layout/imagecardview.xml
@@ -10,7 +10,7 @@
         android:id="@+id/imageCardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground"
         app:cardElevation="4dp"
@@ -37,7 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_below="@id/cardTitle"
-                android:background="@color/colorAccent" />
+                android:transitionName="Image" />
 
 
         </RelativeLayout>
