--- a/app/src/main/res/layout/content_share_image.xml
+++ b/app/src/main/res/layout/content_share_image.xml
@@ -31,6 +31,7 @@
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <ImageView
+                android:layout_marginTop="16dp"
                 android:id="@+id/shareimageImage"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
