--- a/app/src/main/res/menu/drawing_menu.xml
+++ b/app/src/main/res/menu/drawing_menu.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <item
-        android:id="@+id/drawing_save"
-        android:icon="@drawable/ic_save"
-        android:orderInCategory="100"
-        android:title=""
-        app:showAsAction="ifRoom" />
+    <!--<item-->
+        <!--android:id="@+id/drawing_save"-->
+        <!--android:icon="@drawable/ic_save"-->
+        <!--android:orderInCategory="100"-->
+        <!--android:title=""-->
+        <!--app:showAsAction="ifRoom" />-->
 
 </menu>
