--- a/app/src/main/res/layout/content_drawing.xml
+++ b/app/src/main/res/layout/content_drawing.xml
@@ -57,7 +57,8 @@
             android:id="@+id/drawing"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="22" />
+            android:layout_weight="22"
+            android:background="#ffffff" />
 
 
         <LinearLayout
